--- a/about.qmd
+++ b/about.qmd
@@ -6,13 +6,13 @@ about:
   links:
     - icon: twitter
       text: Twitter
-      href: https://twitter.com
+      href: https://twitter.com/sash_wat117
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/sashvenk/
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/sash-wat
 
 ---
 
