--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -1,9 +1,10 @@
 ---
 title: "Post With Code"
-author: "Harlow Malloc"
-date: "2023-10-05"
+author: "Sashwat Venkatesh"
+date: "2023-10-08"
 categories: [news, code, analysis]
-image: "image.jpg"
 ---
 
-This is a post with executable code.
+TESTING TESTING TESTING
+
+![](image.jpg)
