--- a/posts/soccers-biggest-steals-and-scams/index.qmd
+++ b/posts/soccers-biggest-steals-and-scams/index.qmd
@@ -422,3 +422,7 @@ Other players, like GKs Alisson, Kepa, as well as CB Harry Maguire, and Forwards
 While the above players were selected for a variety of reasons, the main reason was their status as the players who had the highest transfer fees at their respective general positions (F, M, D, G). Goals were used to estimate forwards' production, while the sum of goals and assists were used to estimate the production value of midfielders. Clean sheets (a VERY rough statistic) were used to estimate the performance of defenders and goalkeepers.
 
 Given the above conditions, however, there were some players I had to skip over. Enzo Fernandez(M, Chelsea) and Josko Gvardiol(D, Manchester City) were skipped due to a lack of season data in the TransferMarkt dataset. This is reasonable, since they are both now just playing their 3rd and 4th full seasons in major soccer leagues, and as such, their data was incredibly skewed. Joao Felix, a forward for FC Barcelona on loan from Atletico Madrid, was excluded despite being the 3rd highest transfer fee signing of all time due to a variety of injuries and loans that have hampered his playing time, despite having a handful of seasons under his belt. Wesley Fofana, a defender for Chelsea, was skipped for a similar reason, having only played 24 league games in the last 3 full seasons.
+
+############ November 20th:
+
+My largest question is merging the datasets in a way that will allow me to make effective queries on the data. The data from Football Reference isn't structured the same way as the data from TransferMarkt, and focusing on how I can aggregate each season's statistics and then merge onto my original dataframes in order to make the analysis more robust.
